--- a/style.css
+++ b/style.css
@@ -119,7 +119,8 @@ ul li.link {
     margin: 15px;
     padding: 3px 10%;
     display: flex;
-    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-between;
 }
 input#nome {
     width: 350px;
@@ -148,13 +149,13 @@ input#email {
     border-radius: 50%;
 }
 .people.left {
-    position: sticky;
+    position: relative;
     text-align: left;
     padding: 20px;
     max-width: 500px;
 }
 .people.right {
-    position: sticky;
+    position: relative;
     text-align: right;
     padding: 20px;
     max-width: 500px;
@@ -165,6 +166,7 @@ input#email {
 
 .imagem_Mask {
     position: relative;
+    width: 100%;
     top: 60px;
     left: 60px;
 }
